[package]
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
categories = ["data-structures"]
description = "A vector like struct that stores data in hierarchical run-length encoding"
documentation = "https://docs.rs/hrle_vec"
edition = "2021"
homepage = "https://github.com/ken-matsui/hrle_vec#readme"
keywords = ["hrle", "vec", "vector", "hrlevec", "rle", "rlevec"]
license = "MIT"
name = "hrle_vec"
readme = "README.md"
repository = "https://github.com/ken-matsui/hrle_vec/"
version = "0.1.0"

[dependencies]
itertools = "0.13"
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
criterion = {version = "0.4"}
rle_vec = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
statistical = "1.0"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemalloc-ctl = {version = "0.5", package = "tikv-jemalloc-ctl"}
jemallocator = {version = "0.5", package = "tikv-jemallocator"}

[lib]
bench = false

[[bench]]
harness = false
name = "access"

[[bench]]
harness = false
name = "create"
